# sea_battle

./: CMakeLists.txt  README.md
Endpoints/: Client.cpp  Server.cpp  ser_test.cpp
Graphics/: Camera.h  Ftext.txt  Shader.h  f1.txt  f2.txt  glad.c  v1.txt  v2.txt  vspec.txt  vtt.txt
Graphics/glad/include/glad/: glad.h
Gui/: ClientGui.cpp  ClientGui.h
Logic/: ClientLogic.cpp  ClientLogic.h  ServerLogic.cpp  ServerLogic.h
Messages/: Message.h  msg.h  msg_export.h
Messages/MessageTypes/: ClientDataMessage.cpp  ClientDataMessage.h  ClientDataPropagationMessage.cpp  ClientDataPropagationMessage.h  ClientGameEnding.cpp  ClientGameEnding.h  ClientRemovalMessage.cpp  ClientRemovalMessage.h  HelloMessage.cpp  HelloMessage.h  ServerAliveBroadcastMessage.cpp  ServerAliveBroadcastMessage.h
Networking/: Agent.cpp  Agent.h
Utils/: Config.h  Serialization.h  ThreadSafeQueue.h
